<resources>
    <string name="app_name">Popular Movies</string>
    <string name="movie_name">Movie Name</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="title_plot">Plot</string>
    <string name="plot">Plot</string>
    <string name="title_release_date">Release Date: </string>
    <string name="release_date">20 May 2019</string>
    <string name="title_rate">Rate: </string>
    <string name="rate">4.5</string>
    <string name="check_Internet_connection">Check Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="internet_successfully_connected">Internet Successfully Connected</string>
    <string name="title_watch_trailer">Watch Trailer</string>
    <string name="title_reviews">Reviews</string>
    <string name="author">Author</string>
    <string name="no_reviews">No Reviews</string>
    <string name="favourite">Favourite</string>
    <string name="no_favourite">No Favourite Movies</string>

    <!-- content description-->
    <string name="movie_image">movie image</string>
    <string name="back_image">back image</string>
    <string name="share_image">share image</string>

    <!-- Lorem ipsum-->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

</resources>
